--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>SAMPANN KANOJIA'S PORTFOLIO</h1>
     <h2>I am a Software Developer Engineer</h2>
     <hr>
-    <h3><a href="public/movie-ranking.html" style="font-size: x-large;">Movie Ranking Project</a></h3>
+    <h3><a href="movie-ranking.html" style="font-size: x-large;">Movie Ranking Project</a></h3>
     <img src="assets/images/Movie_Ranking.png" height="360">
     <h3><a href="public/birthday-invite.html" style="font-size: x-large;">Birthday Invite Project</a></h3>
     <img src="assets/images/Birthday_Invite.png" height="540">
