--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h2>I am a Software Developer Engineer</h2>
     <hr>
     <h3><a href="movie-ranking.html" style="font-size: x-large;">Movie Ranking Project</a></h3>
-    <img src="assets/images/Movie_Ranking.png" height="360">
-    <h3><a href="public/birthday-invite.html" style="font-size: x-large;">Birthday Invite Project</a></h3>
-    <img src="assets/images/Birthday_Invite.png" height="540">
+    <img src="Movie_Ranking.png" height="360">
+    <h3><a href="birthday-invite.html" style="font-size: x-large;">Birthday Invite Project</a></h3>
+    <img src="Birthday_Invite.png" height="540">
     <hr>
-    <a href="public/about.html">About Me</a> <a href="public/contact.html">Contact Me</a>
+    <a href="about.html">About Me</a> <a href="contact.html">Contact Me</a>
 </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
