--- a/index.html
+++ b/index.html
@@ -1,33 +1,66 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>SAMPANN KANOJIA'S PORTFOLIO</h1>
-    <h2>I am a Software Developer Engineer</h2>
+    <h1>SAMPANN KANOJIA</h1>
+    <img src="/Users/sampannkanojia/Web Development/MY IMAGE-6.jpg" alt="My Image">
+    <h2>Summary</h2>
+    <p>Outgoing & Ambitious graduate with good analytical and critical thinking skills, who doesn't crack under pressure. Eager to use my programming skills to work as a software developer engineer to develop latest software application for the organisation.</p>
     <hr>
-    <h3><a href="movie-ranking.html" style="font-size: x-large;">Movie Ranking Project</a></h3>
-    <img src="Movie_Ranking.png" height="360">
-    <h3><a href="birthday-invite.html" style="font-size: x-large;">Birthday Invite Project</a></h3>
-    <img src="Birthday_Invite.png" height="540">
+    <h2>Education</h2>
+    <p>Bachelor of Technology in Computer Science & Engineering - BVCOE Delhi Affiliated to GGSIPU (2019-2023)</p>
     <hr>
-    <a href="about.html">About Me</a> <a href="contact.html">Contact Me</a>
+    <h2>Work Experience</h2>
+    <h3>IT Automation Intern - Metlife GOSC Noida</h3>
+    <p>April 2023 - June 2023</p>
+    <ul>
+        <li>Worked on GSS1HUB internal tool</li>
+        <li>Learned about typescript and Angular framework</li>
+        <li>Learned about Bootstrap framework</li>
+    </ul>
+    <h2>Skills</h2>
+    <h3>Technical Skills</h3>
+    <ul>
+        <li>Software Developement</li>
+        <li>C language</li>
+        <li>C++</li>
+        <li>Java</li>
+        <li>Python</li>
+        <li>Full Stack Web developement</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Node JS</li>
+        <li>React JS</li>
+        <li>PostgreSQL</li>
+        <li>APIs</li>
+        <li>App Developement</li>
+        <li>Android</li>
+        <li>Kotlin</li>
+        <li>Flutter</li>
+        <li>Dart</li>
+        <li>ios</li>
+        <li>Swift</li>
+        <li>.NET</li>
+        <li>C#</li>
+    </ul>
+    <h3>Soft Skills</h3>
+    <ul>
+        <li>Multitasking</li>
+        <li>Teamwork</li>
+        <li>Time Management</li>
+        <li>Adaptability</li>
+        <li>Communication</li>
+        <li>Analytical</li>
+    </ul>
+    <h2>Other</h2>
+    <a href="/Users/sampannkanojia/Web Development/contact.html">Contact Me</a>
+    <footer>
+        <p>© Sampann Kanojia. All right reserved</p>
+      </footer>
 </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
